crates/schemas/tests/snapshots/schema_validation_comprehensive__device_state_variant_names.snap
---
source: crates/schemas/tests/schema_validation_comprehensive.rs
expression: names
---
[
  "Disconnected",
  "Connected",
  "Active",
  "Faulted",
  "SafeMode"
]
