crates/schemas/tests/snapshots/schema_validation_comprehensive__device_type_variant_names.snap
---
source: crates/schemas/tests/schema_validation_comprehensive.rs
expression: names
---
[
  "Other",
  "WheelBase",
  "SteeringWheel",
  "Pedals",
  "Shifter",
  "Handbrake",
  "ButtonBox"
]
